--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 
 <%= yield %>
-
+<%= debug(@debug) if Rails.env.development? %>
+<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
